Add cloud configuration security
Change-Id: I6579e6b4b3c436e730bd4f0327c65cb79d5a709e

--- a/docker/knot-fog-connector/config.json
+++ b/docker/knot-fog-connector/config.json
@@ -15,9 +15,13 @@
       "hostname": "localhost",
       "port": 1026
     },
-    "service": {
-      "name": "knot",
-      "resource": "/iot/d"
+    "security": {
+      "hostname": "localhost",
+      "port": 5000,
+      "clientId": "f00077e0-36c1-46bc-9278-ed5edc0aa8fe",
+      "clientSecret": "2a33e70e-aa75-4fa8-ad29-b08f63912067",
+      "redirectUri": "https://client.example.com",
+      "code": "SplxlOBeZQQYbYS6WxSbIA"
     }
   },
   "runAs": {
