Add user signin/signup
Change-Id: I268f4966dea10fb1d0a1d53cf3987820d352a664

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -7,6 +7,7 @@ services:
     depends_on:
       - 'database'
     environment:
+      - DEBUG=*
       - NODE_ENV=development
     security_opt:
       - seccomp=unconfined
